Changed Index name

--- a/logstash.conf
+++ b/logstash.conf
@@ -9,6 +9,6 @@ output{
   elasticsearch_http{
     host => "localhost"
     port => 9200
-    index => "distance-%{+YYYY.MM.dd}"
+    index => "temperature-%{+YYYY.MM.dd}"
   }
 }
