Comment plugin properties

--- a/logstash.conf
+++ b/logstash.conf
@@ -1,14 +1,17 @@
-input{
-  tcp{
-    port => 9400
-    codec => "json_lines"
+input{ #Visit http://tinyurl.com/ozjp9wf for more info on Input Plugins
+  tcp{ #Read events over a TCP socket
+    #mode = "client" #Mode defaults to server unless specified  
+    port => 9400 #Port to listen on if mode is 'server'. Else port to connect to 
+    codec => "json_lines" #Convenient way to decode data before entering the input
+    #data_timeout => 15 #Seconds before connection is closed. Defaults to -1
   }
 }
 
-output{
-  elasticsearch_http{
+output{ #Visit http://tinyurl.com/q85nxkn for more info on Output Plugins
+  elasticsearch{
+    protocol => "http" #Protocol used to talk to Elasticsearch
     host => "localhost"
-    port => 9200
-    index => "temperature-%{+YYYY.MM.dd}"
+    port => 9200 #
+    index => "temperature-%{+YYYY.MM.dd}" #Default value will partition indices by day so old data is easily removed or specific date ranges are made searchable. Weekly indices can be specified by %{+xxxx.ww}
   }
 }
